--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "dependencies": {
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "chai": "^4.3.6",
     "hardhat-deploy": "^0.11.12"
+  },
+  "devDependencies": {
+    "hardhat": "^2.10.2"
   }
 }
